TrailheadProject/src/objects/ChallengeToParticipant__c.object
<CustomObject>
    <fields>
        <fullName>Badges__c</fullName>
        <label>Badges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChallengeId__c</fullName>
        <label>ChallengeId</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipName>ChallengeToUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ParticipantId__c</fullName>
        <label>ParticipantId</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>ChallengeToParticipants</relationshipLabel>
        <relationshipName>ChallengeToParticipants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>startBadges__c</fullName>
        <label>startBadges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>startScore__c</fullName>
        <label>startScore</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ChallengeToParticipant</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ChallengeToParticipant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ChallengeToParticipants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>